base/motioneye-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: motion-eye
  name: motion-webcontrol
  namespace: motion
spec:
  ports:
  - port: 7999
    protocol: TCP
    targetPort: 7999
  selector:
    app: motion-eye
  sessionAffinity: None
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: motion-eye
  name: motion-stream
  namespace: motion
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: motion-eye
  sessionAffinity: None
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: motion-eye
  name: motioneye-front
  namespace: motion
spec:
  ports:
  - port: 8765
    protocol: TCP
    targetPort: 8765
  selector:
    app: motion-eye
  sessionAffinity: None
  type: NodePort
